# pyclarify

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE.txt  README.md  changelog.html  genindex.html  glossary.html  index.html  landing.html  license.html  objects.inv  py-modindex.html  requirements.txt  response.json  search.html  searchindex.js  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  build_github_pages.yml
_modules/: index.html
_modules/pyclarify/: client.html
_sources/: index.rst.txt  landing.md.txt  license.rst.txt
_sources/reference/: index.rst.txt  interface.clarifyinterface.rst.txt  interface.rst.txt  models.rst.txt
_sources/user/: quickstart.rst.txt  whatispyclarify.rst.txt
_static/: documentation_options.js
docs/: CHANGELOG.md  reference.md  requirements.txt
docs/docsrc/: Makefile
docs/source/: conf.py  glossary.rst  index.rst  landing.md
doctrees/: environment.pickle  glossary.doctree  index.doctree  license.doctree
doctrees/reference/: autointerface.doctree  index.doctree  interface.clarifyinterface.doctree  interface.doctree  interface.serviceinterface.doctree  models.doctree  oauth2.doctree
doctrees/user/: getcredentials.doctree  index.doctree  installation.doctree  (+2 more)
html/: .buildinfo  glossary.html  index.html
reference/: autointerface.html  client.html  client_orig.html  index.html  interface.html  interface.serviceinterface.html  logging.html  models.html  oauth2.html  views.html
tests/: models_test.py  test.py  test_clarify_client.py  test_clarify_client_publish_signals.py  test_clarify_client_save_signals.py  test_clarify_client_select_items.py  test_clarify_client_select_signals.py  test_client_client_select_signals.py  test_client_evalute.py  test_client_insert.py  test_client_publish_signals.py  test_client_save_signals.py  test_client_select_dataframe.py  test_client_select_items.py  test_client_select_signals.py  test_csv_importer.py  test_insert_items_interface.py  test_interface.py  test_models.py  test_models_auth.py  test_models_authentication.py  test_models_data.py  test_models_request.py  test_models_response.py  test_oauth2.py  test_oauth_models.py  test_pagination.py  test_query.py  test_savesignal_interface.py  test_simple_client.py  test_utils_filter.py  test_utils_time.py
user/: getcredentials.html  index.html  installation.html  quickstart.html  whatispyclarify.html
(+157 files in other folders)
