[metadata]
name = pyclarify
version = 0.1.0
author = Odd Gunnar Aspaas
author_email = odd.gunnar@searis.com
description = Python SDK for reading and writing signals to Clarify.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/searis/pyclarify
project_urls =
    Bug Tracker = https://github.com/searis/pyclarify/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    requests
    pydantic==1.8.2

[options.packages.find]
where = src
