[metadata]
name = pyclarify
version = 0.4.0a1
author = Alexia Artemis Baikas, Eliezer de Souza da Silva, Odd Gunnar Aspaas
author_email = alexia@clarify.io, eliezer@clarify.io, odd.gunnar@clarify.io

description = Python SDK for reading and writing signals to Clarify.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/clarify/pyclarify
project_urls =
    Bug Tracker = https://github.com/clarify/pyclarify/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires = 
    requests
    pydantic
    typing_extensions;python_version=="3.7"

[options.packages.find]
where = src
